tests/ui/canonical_control_reintroduction.stderr
error[E0425]: cannot find type `CanonicalControl` in module `hibana::substrate::cap`
 --> tests/ui/canonical_control_reintroduction.rs:4:58
  |
4 | ...te::cap::CanonicalControl<LoopContinue...
  |             ^^^^^^^^^^^^^^^^ not found in `hibana::substrate::cap`
